# finite-zarankiewicz-closures

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  artifacts.sha256  pyproject.toml  references.bib
.github/workflows/: ci.yml
analysis/: README.md  dgh_boundary.json  extended_results.json  local_kernel_catalog.csv  new_bounds.json  result_status.json  sat_cross_check.json
audit/: README.md  certificate_replay.json  lean_axioms.txt  model_validation.json
certificates/: README.md  degree_deficit.json  terminal_balanced.drat  terminal_balanced.lrat  terminal_one_degree_6.drat  terminal_one_degree_6.lrat  z10_21_106.json  z10_22_110.json  z10_23_112.json  z10_23_sat.json  z11_19_106.json  z11_20_111.json  z11_23_123.json  z12_23_134.json  z13_23_upper_144.json  z9_23_103.json
data/: README.md  z10_21_106_matrix.csv  z10_22_110_matrix.csv  z10_23_112_matrix.csv  z11_19_106_matrix.csv  z11_20_111_matrix.csv  z11_23_123_matrix.csv  z12_23_134_matrix.csv  z9_23_103_matrix.csv
docs/: ADVERSARIAL_AUDIT.md  AWS_Z10_23_RUN.md  BOUND_Z13_23.md  EXTENDED_RESULTS.md  LITERATURE_REVIEW.md  METHODS.md  NEW_BOUNDS.md  PROOF.md  PROOF_Z10_21.md  PROOF_Z10_22.md  PROOF_Z10_23.md  PROOF_Z11_19.md  PROOF_Z11_20.md  PROOF_Z11_23.md  PROOF_Z12_23.md  REPRODUCIBILITY.md  SAT_Z10_23_STATUS.md
lean/: AxiomAudit.lean  README.md  Zarankiewicz.lean  ZarankiewiczFiniteClosures.lean  ZarankiewiczZ923.lean  lake-manifest.json  lakefile.toml
lean/Zarankiewicz/: Basic.lean  (+5 more)
models/: README.md  column_types_10x21_exact_107.lp  column_types_10x22_exact_111.lp  column_types_10x23_exact_113.lp  column_types_11x19_exact_107.lp  column_types_11x20_exact_112.lp  column_types_11x23_exact_124.lp  column_types_12x23_exact_135.lp  column_types_9x23_exact_104.lp  manifest.json  terminal_balanced.cnf  terminal_one_degree_3.cnf  terminal_one_degree_6.cnf
scripts/: analyze_boundary.py  audit_repository.py  build_checksums.py  build_z10_23_sat_manifest.py  check_case_certificates.py  check_extended_results.py  check_frontier_certificate.py  check_new_bounds.py  check_proof_certificate.py  check_z10_23_certificate.py  fetch_z10_23_release_assets.py  generate_models.py  pack_z10_23_cube_release.py  replay_certificates.py  replay_z10_23_certificates.py  validate_models.py  verify_extended_witnesses_independent.py  verify_witness.py  verify_witness_independent.py
search/: README.md  drive.py  filters.py  lp_dgh.py  sat_tool.py  tier2.py  z10_23_certify.py  z10_23_cube_certify.py  z10_23_cube_finalize.py  z10_23_profiles.py  z10_23_residual_refine.py  zsearch.c  zsearch2.c
tests/: __init__.py  test_case_certificates.py  test_certificate.py  test_cube_cover.py  test_cube_finalize.py  test_cube_pack.py  test_cube_replay.py  test_encodings.py  test_extended.py  test_matrix.py  test_new_bounds.py  test_residual_refine.py  test_sat_manifest_builder.py  test_vipr_certificate.py
(+53 files in other folders)
