[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-zarankiewicz-closures"
version = "1.6.0"
description = "Certificates for six exact Zarankiewicz numbers and two documented candidates"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "GPT 5.6-Sol"},
  {name = "Claude (Anthropic)"},
  {name = "OpenAI Codex"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/dfield/finite-zarankiewicz-closures"
Issues = "https://github.com/dfield/finite-zarankiewicz-closures/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
